tests/codegen/errors/env/env/call.collection.domain-mismatch/atom.menu.error.env.call.collection.domain-mismatch.005/menu-env-call.collection.domain-mismatch-005.mon
;; TEST-ID: tests.codegen.menu.errors.env.call.collection.domain.mismatch.005
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: env/call.collection.domain-mismatch
;; TEST-MENU: errors/env/call.collection.domain-mismatch/atom.menu.error.env.call.collection.domain-mismatch.005
;; TEST-MENU-PATH: codegen/errors/env/call.collection.domain-mismatch/atom.menu.error.env.call.collection.domain-mismatch.005
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin env.c diagnostic: Couldn't match collection element type
;; TEST-ATOM: atom.menu.error.env.call.collection.domain-mismatch.005
;; TEST-CODEGEN-ATOM: atom.menu.error.env.call.collection.domain-mismatch.005
;; TEST-ATOM-LEAF: atom.menu.error.env.call.collection.domain-mismatch.005
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: env
;; TEST-ERROR-FAMILY: call.collection.domain-mismatch
;; TEST-ERROR-MESSAGE: Couldn't match collection element type
;; TEST-ERROR-SOURCE: env.c
;; TEST-ERROR-PATH: env.c:1049
;; TEST-CODEGEN-PATH: diagnostic.env.call.collection.domain-mismatch
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: env
;; TEST-TAG: menu
;; TEST-COVERAGE: env.c:1049 Couldn't match collection element type
;; TEST-USES-ATOM: atom.menu.error.env.call.collection.domain-mismatch.005
;; TEST-USES-ATOM: atom.error.env
;; TEST-USES-ATOM: atom.error.env.call.collection.domain-mismatch
;; TEST-USES-ATOM: atom.env.error
;; TEST-DEPENDS-ON: atom.env.hm.check.call
;; TEST-DEPENDS-ON: atom.env.hm.infer.define
;; TEST-REFINES: atom.error.env
;; TEST-REFINES: atom.error.env.call.collection.domain-mismatch
;; TEST-REFINES: atom.env.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors env env

(module Main)
(define (env_menu_double_7_5 [x : Int] -> Int) (+ x x))
(define (env_menu_apply_7_5 [f : Fn :: (Int -> Int)] [xs : String] -> Int) 0)
(show (env_menu_apply_7_5 env_menu_double_7_5 "ciao"))
